--- a/gyms-near-you/templates/about.html
+++ b/gyms-near-you/templates/about.html
@@ -30,10 +30,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="index.html">Gym Tracker</a>
+          <a class="navbar-brand" href="/">Gym Tracker</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item p-2">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item p-2">
               <a class="nav-link" href="signup.html">Sign Up</a>
@@ -64,66 +64,15 @@
     <div class="container-fluid text-center mt-3">
       <h1 class="maintext">Meet the developers!</h1>
     </div>
-    <div class="container mt-5">
-      <div class="box text-center">
-        <h1 class="nametext">Ray Lu</h1>
-        <p><b>Role:</b> Front-End Engineer</p>
-        <p><b>Tools:</b> HTML5, CSS, Vanilla JS, Bootsrap</p>
-        <p>
-          Studied 2 years of Computer Science at CUNY before starting Software
-          Engineering fellowship with the Marcy Lab School to further expand his
-          knowledge on new tech stacks. When Ray's not studying, you can
-          probably find him lifting weights or practicing Jiu Jitsu.
-        </p>
-        <a href="#">Read More Modal Window</a>
-        <div class="media-container">
-          <div class="box">
-            <a href="https://github.com/raylu511"
-              ><img
-                src="images/github-logo.png"
-                alt="Github logo"
-                title="Github"
-            /></a>
-          </div>
-          <div class="box">
-            <a href="https://www.linkedin.com/in/lu-ray/"
-              ><img
-                src="images/linkedin-logo.png"
-                alt="Linkedin logo"
-                title="Linkedin"
-            /></a>
-          </div>
-        </div>
+
+    <div class="container">
+      <div class="developer-card">
+
       </div>
-      <div class="box text-center">
-        <h1 class="nametext">Derek Li</h1>
-        <p><b>Role:</b> Back-End Engineer</p>
-        <p><b>Tools:</b> Python, Flask, PostgreSQL, Heroku</p>
-        <p>
-          After graduating with a BA in Computer Science with a focus in Cyber
-          Security, Derek found passion working with the back-end of web
-          applications.
-        </p>
-        <a href="#">Read More Modal Window</a>
-        <div class="media-container">
-          <div class="box">
-            <a href="https://github.com/DLiSWE"
-              ><img
-                src="images/github-logo.png"
-                alt="Github logo"
-                title="Github"
-            /></a>
-          </div>
-          <div class="box">
-            <a href="https://www.linkedin.com/in/derek-li-b66a23113/"
-              ><img
-                src="images/linkedin-logo.png"
-                alt="Linkedin logo"
-                title="Linkedin"
-            /></a>
-          </div>
-        </div>
+      <div class="developer-card">
+
       </div>
+
     </div>
 
     <!-- Footer -->
