--- a/gyms-near-you/templates/signup.html
+++ b/gyms-near-you/templates/signup.html
@@ -30,10 +30,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="index.html">Gym Tracker</a>
+          <a class="navbar-brand" href="/">Gym Tracker</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item p-2">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item p-2">
               <a class="nav-link" href="signup.html">Sign Up</a>
@@ -62,14 +62,15 @@
     </nav>
 
     <div class="form-container mt-5">
-      <form class="row g-3">
-        <div class="col-sm-6">
-          <label for="firstname" class="form-label">First Name</label>
-          <input type="text" class="form-control" id="firstname" />
+      <h1 class="text-center">Sign Up</h1>
+      <form class="row g-3 mt-5">
+        <div class="col-sm-12">
+          <label for="fullname" class="form-label">Full Name</label>
+          <input type="text" class="form-control" id="fullname" />
         </div>
-        <div class="col-sm-6">
-          <label for="lastname" class="form-label">Last Name</label>
-          <input type="text" class="form-control" id="lastname" />
+        <div class="col-sm-12">
+          <label for="username" class="form-label">Username</label>
+          <input type="text" class="form-control" id="username" />
         </div>
         <div class="col-sm-12">
           <label for="email" class="form-label">Email</label>
