--- a/gyms-near-you/templates/table.html
+++ b/gyms-near-you/templates/table.html
@@ -29,10 +29,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="index.html">Gym Tracker</a>
+          <a class="navbar-brand" href="/">Gym Tracker</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item p-2">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item p-2">
               <a class="nav-link" href="signup.html">Sign Up</a>
@@ -64,26 +64,28 @@
       <h1 class="text-primary">Search Results</h1>
     </div>
 
-    <div class="container-md mt-5">
+    <div class="container-md mt-5 ">
       <table class="table">
         <thead>
           <tr class="row">
-            <td class="col-1 border border-primary">#</td>
-            <td class="col-3 border border-primary">Picture</td>
+            <td class="col-2 border border-primary">#</td>
+            <td class="col-2 border border-primary">Picture</td>
             <td class="col-2 border border-primary">Name</td>
             <td class="col-2 border border-primary">Location</td>
-            <td class="col-1 border border-primary">Rating</td>
+            <td class="col-2 border border-primary">Rating</td>
             <td class="col-2 border border-primary">Phone Number</td>
+            
           </tr>
         </thead>
         <tbody>
           <tr class="row">
-            <th class="col-1 border border-primary">1</th>
-            <td class="col-3 border border-primary">Picture</td>
+            <th class="col-2 border border-primary">1</th>
+            <td class="col-2 border border-primary">Picture</td>
             <td class="col-2 border border-primary">Blink</td>
             <td class="col-2 border border-primary">Some address</td>
-            <td class="col-1 border border-primary">4.5/5</td>
-            <td class="col-2 border border-primary">9173192031</td>
+            <td class="col-2 border border-primary">4.5/5</td>
+            <td class="col-2 border border-primary">9172131232</td>
+           
           </tr>
         </tbody>
       </table>
