--- a/gyms-near-you/templates/history.html
+++ b/gyms-near-you/templates/history.html
@@ -29,10 +29,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="index.html">Gym Tracker</a>
+          <a class="navbar-brand" href="/">Gym Tracker</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item p-2">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item p-2">
               <a class="nav-link" href="signup.html">Sign Up</a>
