--- a/gyms-near-you/templates/table.html
+++ b/gyms-near-you/templates/table.html
@@ -35,7 +35,7 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item p-2">
-              <a class="nav-link" href="signup.html">Sign Up</a>
+              <a class="nav-link" href="/signup">Sign Up</a>
             </li>
             <li class="nav-item p-2">
               <a
@@ -49,7 +49,7 @@
             <li class="nav-item p-2">
               <a
                 class="nav-link"
-                href="about.html"
+                href="/about-us"
                 tabindex="-2"
                 aria-disabled="true"
                 >About Us</a
