--- a/gyms-near-you/templates/signup.html
+++ b/gyms-near-you/templates/signup.html
@@ -63,25 +63,25 @@
 
     <div class="form-container mt-5">
       <h1 class="text-center">Sign Up</h1>
-      <form action="{{url_for('register')}}" name="register" method="POST" class="row g-3 mt-5">
+      <form action="{{url_for('register')}}" name="signup" method="POST" class="row g-3 mt-5">
         <div class="col-sm-12">
           <label for="fullname" class="form-label">Full Name</label>
-          <input type="text" class="form-control" id="fullname" />
+          <input type="text" name="fullname" class="form-control" id="fullname" />
         </div>
         <div class="col-sm-12">
           <label for="username" class="form-label">Username</label>
-          <input type="text" class="form-control" id="username" />
+          <input type="text" name="username" class="form-control" id="username" />
         </div>
         <div class="col-sm-12">
           <label for="email" class="form-label">Email</label>
-          <input type="text" class="form-control" id="email" />
+          <input type="text" name="email" class="form-control" id="email" />
         </div>
         <div class="col-sm-12">
           <label for="password" class="form-label">Password</label>
-          <input type="text" class="form-control" id="password" />
+          <input type="text" name="password"class="form-control" id="password" />
         </div>
         <div class="row mx-auto mt-3">
-          <button type="submit" class="btn btn-primary">Sign Up</button>
+          <button type="submit" name="signup" class="btn btn-primary">Sign Up</button>
         </div>
         <div class="row mx-auto mt-3 text-center">
           <span>Have an account? Sign in</span>
