--- a/gyms-near-you/templates/signin.html
+++ b/gyms-near-you/templates/signin.html
@@ -66,14 +66,14 @@
       <form class="row mt-5">
         <div class="col-sm-12">
           <label for="username" class="form-label">Username</label>
-          <input type="text" class="form-control" id="username" />
+          <input type="text" name="username" class="form-control" id="username" />
         </div>
         <div class="col-sm-12">
           <label for="password" class="form-label">Password</label>
-          <input type="text" class="form-control" id="password" />
+          <input type="text" name="password" class="form-control" id="password" />
         </div>
           <div class="col-md-4 mx-auto ">
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <button type="submit" name="signin" class="btn btn-primary">Sign in</button>
           </div>
         </div>
       </form>
