--- a/gyms-near-you/templates/about.html
+++ b/gyms-near-you/templates/about.html
@@ -66,13 +66,8 @@
     </div>
 
     <div class="container">
-      <div class="developer-card">
-
-      </div>
-      <div class="developer-card">
-
-      </div>
-
+      <div class="developer-card"></div>
+      <div class="developer-card"></div>
     </div>
 
     <!-- Footer -->
