--- a/gyms-near-you/templates/table.html
+++ b/gyms-near-you/templates/table.html
@@ -68,24 +68,23 @@
       <table class="table">
         <thead>
           <tr class="row">
-            <td class="col-2 border border-primary">#</td>
-            <td class="col-2 border border-primary">Picture</td>
-            <td class="col-2 border border-primary">Name</td>
-            <td class="col-2 border border-primary">Location</td>
-            <td class="col-2 border border-primary">Rating</td>
-            <td class="col-2 border border-primary">Phone Number</td>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>
             
           </tr>
         </thead>
         <tbody>
           <tr class="row">
-            <th class="col-2 border border-primary">1</th>
-            <td class="col-2 border border-primary">Picture</td>
-            <td class="col-2 border border-primary">Blink</td>
-            <td class="col-2 border border-primary">Some address</td>
-            <td class="col-2 border border-primary">4.5/5</td>
-            <td class="col-2 border border-primary">9172131232</td>
-           
+            <th class="col-2 border border-primary"></th>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>
+            <td class="col-2 border border-primary"></td>           
           </tr>
         </tbody>
       </table>
