--- a/gyms-near-you/templates/index.html
+++ b/gyms-near-you/templates/index.html
@@ -49,7 +49,7 @@
             <li class="nav-item p-2">
               <a
                 class="nav-link"
-                href="/about-us"
+                href="/about"
                 tabindex="-2"
                 aria-disabled="true"
                 >About Us</a
@@ -66,8 +66,8 @@
         <span class="text">TRACK YOUR GYM</span>
       </div>
       <div class="form">
-        <form action="table.html" name="search" method="POST">
-          <input class="input" type="text" placeholder="Enter your zipcode" />
+        <form action="{{url_for('zipsub')}}" name="search" method="POST">
+          <input id="zipsearch" name="zipsearch" class="input" type="number" placeholder="Enter your zipcode" />
           <button class="button" name="search" type="submit">Search</button>
         </form>
       </div>
