--- a/gyms-near-you/static/about.css
+++ b/gyms-near-you/static/about.css
@@ -1,42 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
 
-.container {
-  width: 100%;
-  height: 400px;
-  display: flex;
-}
-
-.container>.box {
-  width: 45%;
-  height: 100%;
-  border: 2px solid pink;
-  margin: auto;
-}
 .maintext {
   font-family: "Amatic SC", cursive;
   font-size: 50px;
 }
-.nametext{
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+img {
+  width: 100%;
+  height: 100%;
 }
 
-.media-container{
-    width:20%;
-    height:10%;
-    margin:auto;
-    display:flex;
+.container {
+  width: 100%;
+  height: 500px;
+  display: flex;
 }
-.media-container>.box{
-    width:100%;
-    height:100%;
+.container > .developer-card {
+  width: 30%;
+  height: 100%;
+  border: 2px solid pink;
+  margin: auto;
+  padding-left: 1%;
+}
+.container > .developer-card > .media-box {
+  width: 48%;
+  height: 6%;
+  margin: auto;
+  display: flex;
+}
+.container > .developer-card > .media-box > .img-box {
+  width: 20%;
+  height: 100%;
+  margin: auto;
 }
 
-.media-container>.box>a{
-    width:100%;
-    height:100%;
-}
-
-img{
-    width:100%;
-    height:100%;
-}
