--- a/gyms-near-you/templates/about.html
+++ b/gyms-near-you/templates/about.html
@@ -67,12 +67,42 @@
 
     <div class="container">
       <div class="developer-card">
+        <h1 class="text-center">Ray Lu</h1>
+        <p>Role: Front-end Developer</p>
+        <p>Languages/Tools: HTML5, CSS, Bootstrap, Jinja</p>
+        <div class="media-box">
+          <div class="img-box">
+            <a href="https://www.linkedin.com/in/lu-ray/"><img src="./images/github-logo.png" alt="" /></a>
+          </div>
 
+          <div class="img-box">
+            <a href="https://github.com/raylu511"><img src="./images/linkedin-logo.png" alt="" /></a>
+          </div>
+
+          <div class="img-box">
+            <a href="mailto: raylu511@gmail.com"><img src="./images/email-logo.png" alt="" /></a>
+          </div>
+        </div>
       </div>
       <div class="developer-card">
+        <h1 class="text-center">Derek Li</h1>
+        <p>Role: Back-end Developer</p>
+        <p>Languages/Tools: Python, Flask, Jinja, PostgreSQL</p>
+        <div class="media-box">
+          <div class="img-box">
+            <a href="https://www.linkedin.com/in/derek-li-b66a23113/"><img src="./images/github-logo.png" alt="" /></a>
+          </div>
 
+          <div class="img-box">
+            <a href="https://github.com/DLiSWE"><img src="./images/linkedin-logo.png" alt="" /></a>
+          </div>
+
+          <div class="img-box">
+            <a href="mailto: derekli11204@gmail.com"><img src="./images/email-logo.png" alt="" /></a>
+          </div>
+        </div>
       </div>
-
+      
     </div>
 
     <!-- Footer -->
