--- a/gyms-near-you/templates/about.html
+++ b/gyms-near-you/templates/about.html
@@ -41,7 +41,7 @@
             <li class="nav-item p-2">
               <a
                 class="nav-link"
-                href="history.html"
+                href="/history"
                 tabindex="-1"
                 aria-disabled="true"
                 >Search History</a
