--- a/gyms-near-you/templates/about.html
+++ b/gyms-near-you/templates/about.html
@@ -50,7 +50,7 @@
             <li class="nav-item p-2">
               <a
                 class="nav-link"
-                href="/about-us"
+                href="/about"
                 tabindex="-2"
                 aria-disabled="true"
                 >About Us</a
@@ -90,11 +90,11 @@
         <p>Languages/Tools: Python, Flask, Jinja, PostgreSQL</p>
         <div class="media-box">
           <div class="img-box">
-            <a href="https://www.linkedin.com/in/derek-li-b66a23113/"><img src="./images/github-logo.png" alt="" /></a>
+            <a href="https://www.linkedin.com/in/derek-li-b66a23113/"><img src="./images/linkedin-logo.png" alt="" /></a>
           </div>
 
           <div class="img-box">
-            <a href="https://github.com/DLiSWE"><img src="./images/linkedin-logo.png" alt="" /></a>
+            <a href="https://github.com/DLiSWE"><img src="./images/github-logo.png" alt="" /></a>
           </div>
 
           <div class="img-box">
