--- a/gyms-near-you/templates/signup.html
+++ b/gyms-near-you/templates/signup.html
@@ -50,7 +50,7 @@
             <li class="nav-item p-2">
               <a
                 class="nav-link"
-                href="/about-us"
+                href="/about"
                 tabindex="-2"
                 aria-disabled="true"
                 >About Us</a
