--- a/gyms-near-you/templates/about.html
+++ b/gyms-near-you/templates/about.html
@@ -39,6 +39,9 @@
               <a class="nav-link" href="/signup">Sign Up</a>
             </li>
             <li class="nav-item p-2">
+              <a class="nav-link" href="/bmitracker">BMI Tracker</a>
+            </li>            
+            <li class="nav-item p-2">
               <a
                 class="nav-link"
                 href="/history"
@@ -72,21 +75,15 @@
         <p>Languages/Tools: HTML5, CSS, Bootstrap, Jinja</p>
         <div class="media-box">
           <div class="img-box">
-            <a href="https://www.linkedin.com/in/lu-ray/"
-              ><img src="../static/images/linkedin-logo.png" alt=""
-            /></a>
+            <a href="https://www.linkedin.com/in/lu-ray/"><img src="./images/github-logo.png" alt="" /></a>
           </div>
 
           <div class="img-box">
-            <a href="https://github.com/raylu511"
-              ><img src="../static/images/github-logo.png" alt=""
-            /></a>
+            <a href="https://github.com/raylu511"><img src="./images/linkedin-logo.png" alt="" /></a>
           </div>
 
           <div class="img-box">
-            <a href="mailto: raylu511@gmail.com"
-              ><img src="../static/images/email-logo.png" alt=""
-            /></a>
+            <a href="mailto: raylu511@gmail.com"><img src="./images/email-logo.png" alt="" /></a>
           </div>
         </div>
       </div>
@@ -96,24 +93,19 @@
         <p>Languages/Tools: Python, Flask, Jinja, PostgreSQL</p>
         <div class="media-box">
           <div class="img-box">
-            <a href="https://www.linkedin.com/in/derek-li-b66a23113/"
-              ><img src="../static/images/linkedin-logo.png" alt=""
-            /></a>
+            <a href="https://www.linkedin.com/in/derek-li-b66a23113/"><img src="./images/linkedin-logo.png" alt="" /></a>
           </div>
 
           <div class="img-box">
-            <a href="https://github.com/DLiSWE"
-              ><img src="../static/images/github-logo.png" alt=""
-            /></a>
+            <a href="https://github.com/DLiSWE"><img src="./images/github-logo.png" alt="" /></a>
           </div>
 
           <div class="img-box">
-            <a href="mailto: derekli11204@gmail.com"
-              ><img src="../static/images/email-logo.png" alt=""
-            /></a>
+            <a href="mailto: derekli11204@gmail.com"><img src="./images/email-logo.png" alt="" /></a>
           </div>
         </div>
       </div>
+      
     </div>
 
     <!-- Footer -->
