--- a/gyms-near-you/templates/table.html
+++ b/gyms-near-you/templates/table.html
@@ -39,6 +39,9 @@
               <a class="nav-link" href="/signup">Sign Up</a>
             </li>
             <li class="nav-item p-2">
+              <a class="nav-link" href="/bmitracker">BMI Tracker</a>
+            </li>
+            <li class="nav-item p-2">
               <a
                 class="nav-link"
                 href="/history"
