--- a/gyms-near-you/templates/signup.html
+++ b/gyms-near-you/templates/signup.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="/signup">Sign Up</a>
             </li>
             <li class="nav-item p-2">
-              <a class="nav-link" href="/bmitracker">BMI Tracker</a>
+              <a class="nav-link" href="/bmicalc">BMI Tracker</a>
             </li>
             <li class="nav-item p-2">
               <a
@@ -53,7 +53,7 @@
             <li class="nav-item p-2">
               <a
                 class="nav-link"
-                href="/about-us"
+                href="/about"
                 tabindex="-2"
                 aria-disabled="true"
                 >About Us</a
