--- a/gyms-near-you/templates/history.html
+++ b/gyms-near-you/templates/history.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="/signup">Sign Up</a>
             </li>
             <li class="nav-item p-2">
-              <a class="nav-link" href="/bmitracker">BMI Tracker</a>
+              <a class="nav-link" href="/bmicalc">BMI Tracker</a>
             </li>
             <li class="nav-item p-2">
               <a
